--- a/Inicio.css
+++ b/Inicio.css
@@ -86,7 +86,7 @@
 
 @media (max-width: 991px) {
   .u-section-1-1 .u-sheet-1 {
-    min-height: 373px;
+    min-height: 659px;
   }
 
   .u-section-1-1 .u-text-1 {
@@ -95,15 +95,21 @@
   }
 
   .u-section-1-1 .u-text-2 {
-    width: 720px;
-    margin-left: 255px;
-    margin-right: 255px;
+    width: auto;
+    margin-top: 39px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1-1 .u-social-icons-1 {
+    margin-top: 86px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1-1 .u-sheet-1 {
-    min-height: 280px;
+    min-height: 494px;
   }
 
   .u-section-1-1 .u-text-1 {
@@ -113,7 +119,6 @@
   }
 
   .u-section-1-1 .u-text-2 {
-    width: 540px;
     margin-left: 165px;
     margin-right: 165px;
   }
@@ -121,7 +126,7 @@
 
 @media (max-width: 575px) {
   .u-section-1-1 .u-sheet-1 {
-    min-height: 176px;
+    min-height: 311px;
   }
 
   .u-section-1-1 .u-text-1 {
@@ -129,7 +134,6 @@
   }
 
   .u-section-1-1 .u-text-2 {
-    width: 340px;
     margin-top: 20px;
     margin-left: 0;
     margin-right: 0;
